implemented head and footer templates and theme toggle switch

--- a/package.json
+++ b/package.json
@@ -9,6 +9,9 @@
     "astro": "astro"
   },
   "dependencies": {
-    "astro": "^5.4.3"
+    "@astrojs/react": "^4.2.5",
+    "astro": "^5.4.3",
+    "react": "^19.1.0",
+    "react-dom": "^19.1.0"
   }
 }
